tests/api/reference/negative/12-map-get-missing.asm
const invalid = map.get(map.new(), "missing")
